views: centralize LocationBarBubble close logic

This change:
1) Has LocationBarBubbleDelegateView close itself when the WebContents is
   hidden or closed;
2) Removes matching logic that was already in two of its subclasses;
3) Fixes the browser tests for one of those subclasses to allow for async
   window closure.

Bug: 780131
Change-Id: I2362c82c89be1356356663789e97b51b3b2362f8
Reviewed-on: https://chromium-review.googlesource.com/919308
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541454}