chrome/browser/ui/views/location_bar/location_bar_bubble_delegate_view.h
@@ -9,6 +9,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/macros.h"
 #include "content/public/browser/notification_observer.h"
 #include "content/public/browser/notification_registrar.h"
+#include "content/public/browser/web_contents_observer.h"
 #include "ui/views/bubble/bubble_dialog_delegate.h"
 #include "ui/views/event_monitor.h"
 
@@ -22,7 +23,8 @@ class WebContents;
 // will automatically close when the browser transitions in or out of fullscreen
 // mode.
 class LocationBarBubbleDelegateView : public views::BubbleDialogDelegateView,
-                                      public content::NotificationObserver {
+                                      public content::NotificationObserver,
+                                      public content::WebContentsObserver {
  public:
   enum DisplayReason {
     // The bubble appears as a direct result of a user action (clicking on the
@@ -52,6 +54,10 @@ class LocationBarBubbleDelegateView : public views::BubbleDialogDelegateView,
   void Observe(int type,
                const content::NotificationSource& source,
                const content::NotificationDetails& details) override;
+
+  // content::WebContentsObserver:
+  void OnVisibilityChanged(content::Visibility visibility) override;
+  void WebContentsDestroyed() override;
 
   // If the bubble is not anchored to a view, places the bubble in the top right
   // (left in RTL) of the |screen_bounds| that contain web contents's browser
