chrome/browser/ui/views/translate/translate_bubble_view.h
@@ -42,8 +42,7 @@ class TranslateBubbleView : public LocationBarBubbleDelegateView,
                             public views::ComboboxListener,
                             public views::LinkListener,
                             public ui::SimpleMenuModel::Delegate,
-                            public views::StyledLabelListener,
-                            public content::WebContentsObserver {
+                            public views::StyledLabelListener {
  public:
   // Item IDs for the option button's menu.
   enum OptionsMenuItem {
@@ -106,9 +105,6 @@ class TranslateBubbleView : public LocationBarBubbleDelegateView,
   void StyledLabelLinkClicked(views::StyledLabel* label,
                               const gfx::Range& range,
                               int event_flags) override;
-
-  // content::WebContentsObserver method.
-  void WebContentsDestroyed() override;
 
   // Overridden from views::WidgetObserver:
   void OnWidgetClosing(views::Widget* widget) override;
